--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,7 +45,7 @@
       padding-bottom: 10%;
     }
     #header h1 {
-        font-size: 34px;
+        font-size: 54px;
     }
     #countdown{
       width: 100%;
@@ -57,6 +57,9 @@
     }
     .vratham_div{
       height: 55%;
+    }
+    .red_head{
+      font-size: 21px;
     }
   }
 
